apps/syncthing/overlays/nishir/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: syncthing
spec:
  gatewayClassName: syncthing
  listeners:
    - name: http
      port: 80
      protocol: HTTP
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: studio-shikanime-i-syncthing
            group: ""
            kind: Secret
    - name: syncthing
      port: 22000
      protocol: TCP
    - name: syncthing-udp
      port: 22000
      protocol: UDP
