apps/syncthing/overlays/nishir/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: syncthing-oidc-client
  namespace: shikanime
spec:
  targetRefs:
    - name: syncthing
      kind: HTTPRoute
      group: gateway.networking.k8s.io
  oidc:
    provider:
      issuer: https://accounts.i.shikanime.studio
    clientID: syncthing
    clientSecret:
      name: syncthing-oidc-client
    redirectURL: https://syncthing.i.shikanime.studio/oauth2/callback
